Update wrapper.sh